--- a/week01/index.html
+++ b/week01/index.html
@@ -1,10 +1,13 @@
-<! Document > 
+
 <html> 
-	<header>
-	
-	</header>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script src="main.js"></script> 
+
+	</head>
 
 	<body>
-
+		<h1>This is a calculator</h1>
+		<h2>You have to open consol to use it</h2>
 	</body> 
 </html> 
