--- a/week01/index.html
+++ b/week01/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<h1>This is a calculator</h1>
 		<h2>You have to open consol to use it</h2>
+		<p>You can type shit + command + L to open the console </p>
 	</body> 
 </html> 
