change to class

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,7 +15,7 @@
 			<!--What goes into the tabs-->
 			<div class="tabContent" id="about">
 
-				<h2 id="projectTitle">Gallery title<h2>
+				<h2 class="projectTitle">Gallery title<h2>
 
 				<div>
 				
@@ -71,7 +71,7 @@
 
 			
 			<!--the tabs them self-->
-			<ul id="tabs">
+			<ul class="tabs">
 				<li><a href="#about" onclick="showTab()"></a>   </li>
 				<li><a href="#advantages" onclick="showTab()">   </a></li>
 				<li><a href="#usage" onclick="showTab()">   </a></li>
