--- a/gallery/index.html
+++ b/gallery/index.html
@@ -71,7 +71,7 @@
 
 			
 			<!--the tabs them self-->
-			<ul class="tabs">
+			<ul class="subTabs">
 				<li><a href="#about" onclick="showTab()"></a>   </li>
 				<li><a href="#advantages" onclick="showTab()">   </a></li>
 				<li><a href="#usage" onclick="showTab()">   </a></li>
